# data-manipulation-management

./: README.md  fake_records.py  playground.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: autograder.yaml
data/: street_suffixes.json
mec/: clean.py  io.py
tests/: test_clean.py  test_hw1.py  test_io.py  test_normalize.py
