[tool.poetry]
name = "mec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
ipython = "^8.9.0"
requests = "^2.28.2"
pandas = "^1.5.3"
types-requests = "^2.28.11.15"
us = "^2.0.2"
zipcodes = "^1.2.0"
ipykernel = "^6.21.3"
faker = "^17.6.0"


[tool.mypy]
python-executable = ".venv/bin/python"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
